* Use open-rewrite to migrate from JDK8 to JDK11 * Update release notes